@@ -1,6 +1,6 @@
 //
 // ========================================================================
-// Copyright (c) 1995-2022 Mort Bay Consulting Pty Ltd and others.
+// Copyright (c) 1995 Mort Bay Consulting Pty Ltd and others.
 //
 // This program and the accompanying materials are made available under the
 // terms of the Eclipse Public License v. 2.0 which is available at
@@ -13,8 +13,8 @@
 
 package org.eclipse.jetty.http;
 
+import java.util.AbstractSet;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.Enumeration;
@@ -25,80 +25,196 @@ import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Set;
-import java.util.Spliterators;
+import java.util.TreeSet;
+import java.util.concurrent.TimeUnit;
 import java.util.function.BiFunction;
 import java.util.function.BiPredicate;
-import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.function.ToIntFunction;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 /**
- * Interface that represents on ordered collection of {@link HttpField}s.
- * Both {@link MutableHttpFields} and {@link ImmutableHttpFields} implementations are available
- * via the static methods such as {@link #build()} and {@link #from(HttpField...)}.
- * To implement this interface, only the {@link #iterator()} method
- * need be implemented, however default implementations may be inefficient
+ * <p>An ordered collection of {@link HttpField}s that represent the HTTP headers
+ * or HTTP trailers of an HTTP request or an HTTP response.</p>
+ *
+ * <p>{@link HttpFields} is immutable and typically used in server-side HTTP requests
+ * and client-side HTTP responses, while {@link HttpFields.Mutable} is mutable and
+ * typically used in server-side HTTP responses and client-side HTTP requests.</p>
+ *
+ * <p>Access is always more efficient using {@link HttpHeader} keys rather than {@link String} field names.</p>
+ *
+ * <p>The primary implementations of {@code HttpFields} have been optimized assuming few
+ * lookup operations, thus typically if many {@link HttpField}s need to looked up, it may be
+ * better to use an {@link Iterator} to find multiple fields in a single iteration.</p>
  */
-public interface HttpFields extends Iterable<HttpField>
+public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
 {
+    /**
+     * <p>A constant {@link HttpField} for the HTTP header:</p>
+     * <p>{@code Expires: Thu, 01 Jan 1970 00:00:00 GMT}</p>
+     */
     HttpField EXPIRES_01JAN1970 = new PreEncodedHttpField(HttpHeader.EXPIRES, DateGenerator.__01Jan1970);
+    /**
+     * <p>A constant {@link HttpField} for the HTTP header:</p>
+     * <p>{@code Connection: close}</p>
+     */
     HttpField CONNECTION_CLOSE = new PreEncodedHttpField(HttpHeader.CONNECTION, HttpHeaderValue.CLOSE.asString());
+    /**
+     * <p>A constant {@link HttpField} for the HTTP header:</p>
+     * <p>{@code Connection: keep-alive}</p>
+     */
     HttpField CONNECTION_KEEPALIVE = new PreEncodedHttpField(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString());
+    /**
+     * <p>A constant {@link HttpField} for the HTTP header:</p>
+     * <p>{@code Content-Length: 0}</p>
+     */
+    HttpField CONTENT_LENGTH_0 = new PreEncodedHttpField(HttpHeader.CONTENT_LENGTH, 0L);
 
-    HttpFields EMPTY = build().asImmutable();
+    /**
+     * <p>A constant for an immutable and empty {@link HttpFields}.</p>
+     */
+    HttpFields EMPTY = new EmptyHttpFields();
 
+    /**
+     * <p>Returns an empty {@link Mutable} instance.</p>
+     *
+     * @return an empty {@link Mutable} instance
+     */
     static Mutable build()
     {
-        return new MutableHttpFields();
+        return new org.eclipse.jetty.http.MutableHttpFields();
     }
 
+    /**
+     * <p>Returns an empty {@link Mutable} instance with the given initial {@code capacity}.</p>
+     * <p>The given {@code capacity} indicates the initial capacity of the storage for the
+     * {@link HttpField}s.</p>
+     * <p>When the capacity is exceeded, the storage is resized to accommodate the additional
+     * {@link HttpField}s.</p>
+     *
+     * @param capacity the initial capacity of the storage for the {@link HttpField}s
+     * @return an empty instance with the given initial {@code capacity}
+     */
     static Mutable build(int capacity)
     {
-        return new MutableHttpFields(capacity);
+        return new org.eclipse.jetty.http.MutableHttpFields(capacity);
     }
 
+    /**
+     * <p>Returns a new {@link Mutable} instance containing a copy of all the
+     * {@link HttpField}s of the given {@link HttpFields} parameter.</p>
+     *
+     * @param fields the {@link HttpFields} to copy
+     * @return a new {@link Mutable} instance containing a copy of the given {@link HttpFields}
+     */
     static Mutable build(HttpFields fields)
     {
-        return new MutableHttpFields(fields);
+        return new org.eclipse.jetty.http.MutableHttpFields(fields);
     }
 
+    /**
+     * <p>Returns a new {@link Mutable} instance containing a copy of all the
+     * {@link HttpField}s of the given {@link HttpFields}, replacing with the
+     * given {@link HttpField} all the fields {@link HttpField}s with the same
+     * name.</p>
+     * <p>All existing {@link HttpField}s with the same name as the
+     * replacing {@link HttpField} will be replaced by the given {@link HttpField}.
+     * If there are no fields with that name, the given {@link HttpField}
+     * is added to the returned {@link Mutable} instance.</p>
+     *
+     * @param fields the {@link HttpFields} to copy
+     * @param replaceField the {@link HttpField} that replaces others with the same name
+     * @return a new {@link Mutable} instance containing the given {@link HttpFields}
+     * and the given replacement {@link HttpField}
+     */
     static Mutable build(HttpFields fields, HttpField replaceField)
     {
-        return new MutableHttpFields(fields, replaceField);
+        return new org.eclipse.jetty.http.MutableHttpFields(fields, replaceField);
     }
 
+    /**
+     * <p>Returns a new {@link Mutable} instance containing a copy of all the
+     * {@link HttpField}s of the given {@link HttpFields}, removing the
+     * {@link HttpField}s with the given names.</p>
+     *
+     * @param fields the {@link HttpFields} to copy
+     * @param removeFields the names of the fields to remove
+     * @return a new {@link Mutable} instance containing the given {@link HttpFields}
+     * without the fields with the given names
+     */
     static Mutable build(HttpFields fields, EnumSet<HttpHeader> removeFields)
     {
-        return new MutableHttpFields(fields, removeFields);
+        return new org.eclipse.jetty.http.MutableHttpFields(fields, removeFields);
     }
 
-    static ImmutableHttpFields from(HttpField... fields)
+    /**
+     * <p>Returns an immutable {@link HttpFields} instance containing the given
+     * {@link HttpField}s.</p>
+     *
+     * @param fields the {@link HttpField}s to be contained in the returned instance
+     * @return a new immutable {@link HttpFields} instance with the given {@link HttpField}s
+     */
+    static HttpFields from(HttpField... fields)
     {
-        return new ImmutableHttpFields(fields);
+        return new org.eclipse.jetty.http.ImmutableHttpFields(fields);
     }
 
-    static ImmutableHttpFields from(HttpFields fields, Function<HttpField, HttpField> mutation)
+    /**
+     * <p>Supplies this instance, typically used to supply HTTP trailers.</p>
+     *
+     * @return this instance
+     */
+    @Override
+    default HttpFields get()
     {
-        return new ImmutableHttpFields(fields.stream().map(mutation).filter(Objects::nonNull).toArray(HttpField[]::new));
+        return this;
     }
 
+    @Override
+    default Iterator<HttpField> iterator()
+    {
+        return listIterator();
+    }
+
+    /**
+     * @return an iterator over the {@link HttpField}s in this {@code HttpFields}.
+     * @see #listIterator(int)
+     */
+    default ListIterator<HttpField> listIterator()
+    {
+        return listIterator(0);
+    }
+
+    /**
+     * @return an iterator over the {@link HttpField}s in this {@code HttpFields} starting at the given index.
+     * @see #listIterator()
+     */
+    ListIterator<HttpField> listIterator(int index);
+
+    /**
+     * <p>Returns an immutable copy of this {@link HttpFields} instance.</p>
+     *
+     * @return a new immutable copy of this {@link HttpFields} instance
+     */
     default HttpFields asImmutable()
     {
         return HttpFields.build(this).asImmutable();
     }
 
     /**
-     * Efficiently take the fields as an Immutable that cannot be changed by any further mutations
-     * to this instance.
-     * @return An immutable version of the fields.
+     * <p>Returns the HTTP/1.1 string representation of the {@link HttpField}s of this instance.</p>
+     * <p>The format of each field is: {@code <name>: <value>\r\n}, and there will be
+     * an additional {@code \r\n} after the last field, for example:</p>
+     * <pre>{@code
+     * Host: localhost\r\n
+     * Connection: close\r\n
+     * \r\n
+     * }</pre>
+     *
+     * @return an HTTP/1.1 string representation of the {@link HttpField}s of this instance
      */
-    default HttpFields takeAsImmutable()
-    {
-        return HttpFields.build(this).takeAsImmutable();
-    }
-
     default String asString()
     {
         StringBuilder buffer = new StringBuilder();
@@ -120,6 +236,16 @@ public interface HttpFields extends Iterable<HttpField>
         return buffer.toString();
     }
 
+    /**
+     * <p>Returns whether this instance contains the given {@link HttpField}.</p>
+     * <p>The comparison of {@link HttpField} names is case-insensitive via
+     * {@link HttpField#isSameName(HttpField)}.
+     * The comparison of the field value is case-insensitive via
+     * {@link HttpField#contains(String)}.</p>
+     *
+     * @param field the {@link HttpField} to search for
+     * @return whether this instance contains the given {@link HttpField}
+     */
     default boolean contains(HttpField field)
     {
         for (HttpField f : this)
@@ -130,6 +256,17 @@ public interface HttpFields extends Iterable<HttpField>
         return false;
     }
 
+    /**
+     * <p>Returns whether this instance contains the given {@link HttpHeader}
+     * with the given value.</p>
+     * <p>The comparison of the field value is case-insensitive via
+     * {@link HttpField#contains(String)}.</p>
+     *
+     * @param header the name of the field to search for
+     * @param value the value to search for
+     * @return whether this instance contains the given
+     * {@link HttpHeader} with the given value
+     */
     default boolean contains(HttpHeader header, String value)
     {
         for (HttpField f : this)
@@ -140,6 +277,40 @@ public interface HttpFields extends Iterable<HttpField>
         return false;
     }
 
+    /**
+     * Look for a value as the last value in a possible multivalued field.
+     * Parameters and specifically quality parameters are not considered.
+     * @param header The {@link HttpHeader} type to search for.
+     * @param value The value to search for (case-insensitive)
+     * @return True iff the value is contained in the field value entirely or
+     * as the last element of a quoted comma separated list.
+     * @see HttpField#containsLast(String)
+     */
+    default boolean containsLast(HttpHeader header, String value)
+    {
+        for (ListIterator<HttpField> i = listIterator(size()); i.hasPrevious();)
+        {
+            HttpField f = i.previous();
+
+            if (f.getHeader() == header)
+                return f.containsLast(value);
+        }
+        return false;
+    }
+
+    /**
+     * <p>Returns whether this instance contains the given field name
+     * with the given value.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.
+     * The comparison of the field value is case-insensitive via
+     * {@link HttpField#contains(String)}.</p>
+     *
+     * @param name the case-insensitive field name to search for
+     * @param value the field value to search for
+     * @return whether this instance contains the given
+     * field name with the given value
+     */
     default boolean contains(String name, String value)
     {
         for (HttpField f : this)
@@ -150,6 +321,12 @@ public interface HttpFields extends Iterable<HttpField>
         return false;
     }
 
+    /**
+     * <p>Returns whether this instance contains the given field name.</p>
+     *
+     * @param header the field name to search for
+     * @return whether this instance contains the given field name
+     */
     default boolean contains(HttpHeader header)
     {
         for (HttpField f : this)
@@ -160,6 +337,13 @@ public interface HttpFields extends Iterable<HttpField>
         return false;
     }
 
+    /**
+     * <p>Returns whether this instance contains at least one of the given
+     * field names.</p>
+     *
+     * @param headers the field names to search among
+     * @return whether this instance contains at least one of the given field names
+     */
     default boolean contains(EnumSet<HttpHeader> headers)
     {
         for (HttpField f : this)
@@ -170,6 +354,16 @@ public interface HttpFields extends Iterable<HttpField>
         return false;
     }
 
+    /**
+     * <p>Returns whether this instance contains the given field name.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}. If possible, it is more efficient to use
+     * {@link #contains(HttpHeader)}.
+     *
+     * @param name the case-insensitive field name to search for
+     * @return whether this instance contains the given field name
+     * @see #contains(HttpHeader) 
+     */
     default boolean contains(String name)
     {
         for (HttpField f : this)
@@ -180,6 +374,17 @@ public interface HttpFields extends Iterable<HttpField>
         return false;
     }
 
+    /**
+     * <p>Returns the encoded value of the first field with the given field name,
+     * or {@code null} if no such header is present.</p>
+     * <p>In case of multi-valued fields, the returned value is the encoded
+     * value, including commas and quotes, as returned by {@link HttpField#getValue()}.</p>
+     *
+     * @param header the field name to search for
+     * @return the raw value of the first field with the given field name,
+     * or {@code null} if no such header is present
+     * @see HttpField#getValue()
+     */
     default String get(HttpHeader header)
     {
         for (HttpField f : this)
@@ -190,23 +395,61 @@ public interface HttpFields extends Iterable<HttpField>
         return null;
     }
 
-    default String get(String header)
+    /**
+     * <p>Returns the encoded value of the last field with the given field name,
+     * or {@code null} if no such header is present.</p>
+     * <p>In case of multi-valued fields, the returned value is the encoded
+     * value, including commas and quotes, as returned by {@link HttpField#getValue()}.</p>
+     *
+     * @param header the field name to search for
+     * @return the raw value of the last field with the given field name,
+     * or {@code null} if no such header is present
+     * @see HttpField#getValue()
+     */
+    default String getLast(HttpHeader header)
     {
-        for (HttpField f : this)
+        for (ListIterator<HttpField> i = listIterator(size()); i.hasPrevious();)
         {
-            if (f.is(header))
+            HttpField f = i.previous();
+            if (f.getHeader() == header)
                 return f.getValue();
         }
         return null;
     }
 
     /**
-     * Get multiple field values of the same name, split
-     * as a {@link QuotedCSV}
+     * <p>Returns the encoded value of the first field with the given field name,
+     * or {@code null} if no such field is present.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}. If possible, it is more efficient to use {@link #get(HttpHeader)}.</p>
+     * <p>In case of multi-valued fields, the returned value is the encoded
+     * value, including commas and quotes, as returned by {@link HttpField#getValue()}.</p>
      *
-     * @param header The header
-     * @param keepQuotes True if the fields are kept quoted
-     * @return List the values with OWS stripped
+     * @param name the case-insensitive field name to search for
+     * @return the raw value of the first field with the given field name,
+     * or {@code null} if no such field is present
+     * @see HttpField#getValue()
+     * @see #get(HttpHeader) 
+     */
+    default String get(String name)
+    {
+        for (HttpField f : this)
+        {
+            if (f.is(name))
+                return f.getValue();
+        }
+        return null;
+    }
+
+    /**
+     * <p>Returns all the values of all the fields with the given field name.</p>
+     * <p>In case of multi-valued fields, the multi-value of the field is split using
+     * {@link QuotedCSV}, taking into account the given {@code keepQuotes} parameter.</p>
+     *
+     * @param header the field name to search for
+     * @param keepQuotes whether the fields values should retain the quotes
+     * @return a list of all the values of all the fields with the given name,
+     * or an empty list if no such field name is present
      */
     default List<String> getCSV(HttpHeader header, boolean keepQuotes)
     {
@@ -224,12 +467,16 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get multiple field values of the same name
-     * as a {@link QuotedCSV}
+     * <p>Returns all the values of all the fields with the given field name.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
+     * <p>In case of multi-valued fields, the multi-value of the field is split using
+     * {@link QuotedCSV}, taking into account the given {@code keepQuotes} parameter.</p>
      *
-     * @param name the case-insensitive field name
-     * @param keepQuotes True if the fields are kept quoted
-     * @return List the values with OWS stripped
+     * @param name the case-insensitive field name to search for
+     * @param keepQuotes whether the fields values should retain the quotes
+     * @return a list of all the values of all the fields with the given name,
+     * or an empty list if no such field name is present
      */
     default List<String> getCSV(String name, boolean keepQuotes)
     {
@@ -247,11 +494,14 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get a header as a date value. Returns the value of a date field, or -1 if not found. The case
-     * of the field name is ignored.
+     * <p>Returns the value of a date field as the number of milliseconds
+     * since the Unix Epoch, or -1 if no such field is present.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
      *
-     * @param name the case-insensitive field name
-     * @return the value of the field as a number of milliseconds since unix epoch
+     * @param name the case-insensitive field name to search for
+     * @return the value of the field as the number of milliseconds since Unix Epoch,
+     * or -1 if no such field is present
      */
     default long getDateField(String name)
     {
@@ -259,18 +509,19 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get a header as a date value. Returns the value of a date field, or -1 if not found. The case
-     * of the field name is ignored.
+     * <p>Returns the value of a date field as the number of milliseconds
+     * since the Unix Epoch, or -1 if no such field is present.</p>
      *
-     * @param header the header
-     * @return the value of the field as a number of milliseconds since unix epoch
+     * @param header the field name to search for
+     * @return the value of the field as the number of milliseconds since Unix Epoch,
+     * or -1 if no such field is present
      */
     default long getDateField(HttpHeader header)
     {
         return parseDateField(getField(header));
     }
 
-    static long parseDateField(HttpField field)
+    private static long parseDateField(HttpField field)
     {
         if (field == null)
             return -1;
@@ -279,22 +530,21 @@ public interface HttpFields extends Iterable<HttpField>
         if (val == null)
             return -1;
 
-        final long date = DateParser.parseDate(val);
-        if (date == -1)
-            throw new IllegalArgumentException("Cannot convert date: " + val);
-        return date;
+        return TimeUnit.SECONDS.toMillis(HttpDateTime.parse(val).toEpochSecond());
     }
 
     /**
-     * Get a Field by index.
+     * <p>Returns the {@link HttpField} at the given {@code index},
+     * or {@code null} if there is no field at the given index.</p>
      *
-     * @param index the field index
-     * @return A Field value or null if the Field value has not been set
+     * @param index the index of the {@link HttpField}
+     * @return the {@link HttpField} at the given {@code index},
+     * or {@code null} if there is no field at the given index
      */
     default HttpField getField(int index)
     {
         int i = 0;
-        for (HttpField f: this)
+        for (HttpField f : this)
         {
             if (i++ == index)
                 return f;
@@ -302,6 +552,14 @@ public interface HttpFields extends Iterable<HttpField>
         return null;
     }
 
+    /**
+     * <p>Returns the first {@link HttpField} with the given field name,
+     * or {@code null} if no such field is present.</p>
+     *
+     * @param header the field name to search for
+     * @return the first {@link HttpField} with the given field name,
+     * or {@code null} if no such field is present
+     */
     default HttpField getField(HttpHeader header)
     {
         for (HttpField f : this)
@@ -312,6 +570,16 @@ public interface HttpFields extends Iterable<HttpField>
         return null;
     }
 
+    /**
+     * <p>Returns the first {@link HttpField} with the given field name,
+     * or {@code null} if no such field is present.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
+     *
+     * @param name the case-insensitive field name to search for
+     * @return the first {@link HttpField} with the given field name,
+     * or {@code null} if no such field is present
+     */
     default HttpField getField(String name)
     {
         for (HttpField f : this)
@@ -323,9 +591,6 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get enumeration of header _names. Returns an enumeration of strings representing the header
-     * _names for this request.
-     *
      * @return an enumeration of field names
      * @deprecated use {@link #getFieldNamesCollection()}
      */
@@ -336,26 +601,82 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get Set of header names.
+     * <p>Returns a {@link Set} of the field names.</p>
+     * <p>Case-sensitivity of the field names is preserved.</p>
      *
-     * @return the unique set of field names.
+     * @return an immutable {@link Set} of the field names. Changes made to the
+     * {@code HttpFields} after this call are not reflected in the set.
      */
     default Set<String> getFieldNamesCollection()
     {
-        return stream().map(HttpField::getName).collect(Collectors.toSet());
+        Set<HttpHeader> seenByHeader = EnumSet.noneOf(HttpHeader.class);
+        Set<String> buildByName = null;
+        List<String> list = new ArrayList<>(size());
+
+        for (HttpField f : this)
+        {
+            HttpHeader header = f.getHeader();
+            if (header == null)
+            {
+                if (buildByName == null)
+                    buildByName = new TreeSet<>(String::compareToIgnoreCase);
+                if (buildByName.add(f.getName()))
+                    list.add(f.getName());
+            }
+            else if (seenByHeader.add(header))
+            {
+                list.add(f.getName());
+            }
+        }
+
+        Set<String> seenByName = buildByName;
+
+        // use the list to retain a rough ordering
+        return new AbstractSet<>()
+        {
+            @Override
+            public Iterator<String> iterator()
+            {
+                return list.iterator();
+            }
+
+            @Override
+            public int size()
+            {
+                return list.size();
+            }
+
+            @Override
+            public boolean contains(Object o)
+            {
+                if (o instanceof String s)
+                    return seenByName != null && seenByName.contains(s) || seenByHeader.contains(HttpHeader.CACHE.get(s));
+                return false;
+            }
+        };
     }
 
     /**
-     * Get multiple fields of the same header
+     * <p>Returns all the {@link HttpField}s with the given field name.</p>
      *
-     * @param header the header
-     * @return List the fields
+     * @param header the field name to search for
+     * @return a list of the {@link HttpField}s with the given field name,
+     * or an empty list if no such field name is present
      */
     default List<HttpField> getFields(HttpHeader header)
     {
         return getFields(header, (f, h) -> f.getHeader() == h);
     }
 
+    /**
+     * <p>Returns all the {@link HttpField}s with the given field name.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
+     *
+     * @param name the case-insensitive field name to search for
+     * @return a list of the {@link HttpField}s with the given field name,
+     * or an empty list if no such field name is present
+     */
     default List<HttpField> getFields(String name)
     {
         return getFields(name, (f, n) -> f.is(name));
@@ -369,12 +690,16 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get a header as an long value. Returns the value of an integer field or -1 if not found. The
-     * case of the field name is ignored.
+     * <p>Returns the value of a field as a {@code long} value,
+     * or -1 if no such field is present.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
      *
      * @param name the case-insensitive field name
-     * @return the value of the field as a long
-     * @throws NumberFormatException If bad long found
+     * @return the value of the field as a {@code long},
+     * or -1 if no such field is present
+     * @throws NumberFormatException if the value of the field
+     * cannot be converted to a {@code long}
      */
     default long getLongField(String name) throws NumberFormatException
     {
@@ -383,12 +708,14 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get a header as an long value. Returns the value of an integer field or -1 if not found. The
-     * case of the field name is ignored.
+     * <p>Returns the value of a field as a {@code long} value,
+     * or -1 if no such field is present.</p>
      *
-     * @param header the header type
-     * @return the value of the field as a long
-     * @throws NumberFormatException If bad long found
+     * @param header the field name
+     * @return the value of the field as a {@code long},
+     * or -1 if no such field is present
+     * @throws NumberFormatException if the value of the field
+     * cannot be converted to a {@code long}
      */
     default long getLongField(HttpHeader header) throws NumberFormatException
     {
@@ -397,11 +724,13 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get multiple field values of the same name, split and
-     * sorted as a {@link QuotedQualityCSV}
+     * <p>Returns all the values of all the fields with the given name,
+     * split and sorted in quality order using {@link QuotedQualityCSV}.</p>
      *
-     * @param header The header
-     * @return List the values in quality order with the q param and OWS stripped
+     * @param header the field name to search for
+     * @return a list of all the values of all the fields with the given name,
+     * split and sorted in quality order,
+     * or an empty list if no such field name is present
      */
     default List<String> getQualityCSV(HttpHeader header)
     {
@@ -409,12 +738,17 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get multiple field values of the same name, split and
-     * sorted as a {@link QuotedQualityCSV}
+     * <p>Returns all the values of all the fields with the given name,
+     * split and sorted first in quality order and then optionally further
+     * sorted with the given function, using {@link QuotedQualityCSV}.</p>
      *
-     * @param header The header
-     * @param secondaryOrdering Function to apply an ordering other than specified by quality
-     * @return List the values in quality order with the q param and OWS stripped
+     * @param header the field name to search for
+     * @param secondaryOrdering the secondary sort function, or {@code null}
+     * for no secondary sort
+     * @return a list of all the values of all the fields with the given name,
+     * split and sorted in quality order and optionally further sorted with
+     * the given function,
+     * or an empty list if no such field name is present
      */
     default List<String> getQualityCSV(HttpHeader header, ToIntFunction<String> secondaryOrdering)
     {
@@ -433,11 +767,15 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get multiple field values of the same name, split and
-     * sorted as a {@link QuotedQualityCSV}
+     * <p>Returns all the values of all the fields with the given name,
+     * split and sorted in quality order using {@link QuotedQualityCSV}.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
      *
-     * @param name the case-insensitive field name
-     * @return List the values in quality order with the q param and OWS stripped
+     * @param name the case-insensitive field name to search for
+     * @return a list of all the values of all the fields with the given name,
+     * split and sorted in quality order,
+     * or an empty list if no such field name is present
      */
     default List<String> getQualityCSV(String name)
     {
@@ -455,10 +793,16 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get multi headers
+     * <p>Returns an {@link Enumeration} of the encoded values of all the fields
+     * with the given name.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
+     * <p>In case of multi-valued fields, the returned value is the encoded
+     * value, including commas and quotes, as returned by {@link HttpField#getValue()}.</p>
      *
-     * @param name the case-insensitive field name
-     * @return Enumeration of the values
+     * @param name the case-insensitive field name to search for
+     * @return an {@link Enumeration} of the encoded values of all
+     * the fields with the given name
      */
     default Enumeration<String> getValues(String name)
     {
@@ -499,10 +843,15 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get multiple field values of the same name
+     * <p>Returns a list of the encoded values of all the fields
+     * with the given name.</p>
+     * <p>In case of multi-valued fields, the returned value is the encoded
+     * value, including commas and quotes, as returned by {@link HttpField#getValue()}.</p>
      *
-     * @param header the header
-     * @return List the values
+     * @param header the field name to search for
+     * @return a list of the encoded values of all the fields
+     * with the given name,
+     * or an empty list if no such field name is present
      */
     default List<String> getValuesList(HttpHeader header)
     {
@@ -516,10 +865,17 @@ public interface HttpFields extends Iterable<HttpField>
     }
 
     /**
-     * Get multiple header of the same name
+     * <p>Returns a list of the encoded values of all the fields
+     * with the given name.</p>
+     * <p>The comparison of field name is case-insensitive via
+     * {@link HttpField#is(String)}.</p>
+     * <p>In case of multi-valued fields, the returned value is the encoded
+     * value, including commas and quotes, as returned by {@link HttpField#getValue()}.</p>
      *
-     * @param name the case-insensitive field name
-     * @return List the header values
+     * @param name the field name to search for
+     * @return a list of the encoded values of all the fields
+     * with the given name,
+     * or an empty list if no such field name is present
      */
     default List<String> getValuesList(String name)
     {
@@ -532,6 +888,16 @@ public interface HttpFields extends Iterable<HttpField>
         return list;
     }
 
+    /**
+     * <p>Returns whether this instance is equal to the given instance.</p>
+     * <p>Returns {@code true} if and only if the two instances have the
+     * same number of fields, in the same order, and each field is equal,
+     * but makes no difference between {@link Mutable} and non-{@link Mutable}
+     * instances.</p>
+     *
+     * @param that the {@link HttpFields} instance to compare to
+     * @return whether the two instances are equal
+     */
     default boolean isEqualTo(HttpFields that)
     {
         if (size() != that.size())
@@ -548,90 +914,191 @@ public interface HttpFields extends Iterable<HttpField>
         return !i.hasNext();
     }
 
+    /**
+     * @return the number of {@link HttpField}s in this instance
+     */
     default int size()
     {
-        int s = 0;
-        for (HttpField f : this)
-            s++;
-        return s;
-    }
-
-    default Stream<HttpField> stream()
-    {
-        return StreamSupport.stream(Spliterators.spliteratorUnknownSize(iterator(), 0), false);
+        int size = 0;
+        for (HttpField ignored : this)
+        {
+            size++;
+        }
+        return size;
     }
 
     /**
-     * A mutable HttpFields interface.
-     * To implement this interface, only the {@link #listIterator()}
-     * method needs to be implemented, however default implementations
-     * may not be efficient.
+     * <p>Wraps an instance of {@link HttpFields} as a {@link Map}.</p>
+     * <p>If the provided {@link HttpFields} is an instance of {@link HttpFields.Mutable} then changes to the
+     * {@link Map} will be reflected in the underlying {@link HttpFields}.
+     * Otherwise, any modification to the {@link Map} will throw {@link UnsupportedOperationException}.</p>
+     * @param fields the {@link HttpFields} to convert to a {@link Map}.
+     * @return an {@link Map} representing the contents of the {@link HttpFields}.
      */
-    interface Mutable extends Iterable<HttpField>, HttpFields
+    static Map<String, List<String>> asMap(HttpFields fields)
+    {
+        return (fields instanceof HttpFields.Mutable mutable)
+            ? new HttpFieldsMap.Mutable(mutable)
+            : new HttpFieldsMap.Immutable(fields);
+    }
+
+    /**
+     * @return a sequential stream of the {@link HttpField}s in this instance
+     */
+    default Stream<HttpField> stream()
+    {
+        return StreamSupport.stream(spliterator(), false);
+    }
+
+    /**
+     * <p>A mutable version of {@link HttpFields}.</p>
+     * <p>Name and value pairs representing HTTP headers or HTTP
+     * trailers can be added to or removed from this instance.</p>
+     */
+    interface Mutable extends HttpFields
     {
         /**
-         * Add to or set a field. If the field is allowed to have multiple values, add will add multiple
-         * headers of the same name.
+         * <p>Adds a new {@link HttpField} with the given name and string value.</p>
+         * <p>The new {@link HttpField} is added even if a field with the
+         * same name is already present.</p>
          *
-         * @param name the name of the field
-         * @param value the value of the field.
-         * @return this builder
+         * @param name the non-{@code null} name of the field
+         * @param value the non-{@code null} value of the field
+         * @return this instance
          */
         default Mutable add(String name, String value)
         {
-            if (value != null)
-                return add(new HttpField(name, value));
-            return this;
+            Objects.requireNonNull(name);
+            Objects.requireNonNull(value);
+            return add(new HttpField(name, value));
         }
 
+        /**
+         * <p>Adds a new {@link HttpField} with the given name and {@code long} value.</p>
+         * <p>The new {@link HttpField} is added even if a field with the
+         * same name is already present.</p>
+         *
+         * @param name the non-{@code null} name of the field
+         * @param value the value of the field
+         * @return this instance
+         */
+        default Mutable add(String name, long value)
+        {
+            Objects.requireNonNull(name);
+            return add(new HttpField.LongValueHttpField(name, value));
+        }
+
+        /**
+         * <p>Adds a new {@link HttpField} with the given name and value.</p>
+         * <p>The new {@link HttpField} is added even if a field with the
+         * same name is already present.</p>
+         *
+         * @param header the non-{@code null} name of the field
+         * @param value the non-{@code null} value of the field
+         * @return this instance
+         */
         default Mutable add(HttpHeader header, HttpHeaderValue value)
         {
+            Objects.requireNonNull(header);
+            Objects.requireNonNull(value);
             return add(header, value.toString());
         }
 
         /**
-         * Add to or set a field. If the field is allowed to have multiple values, add will add multiple
-         * headers of the same name.
+         * <p>Adds a new {@link HttpField} with the given name and string value.</p>
+         * <p>The new {@link HttpField} is added even if a field with the
+         * same name is already present.</p>
          *
-         * @param header the header
-         * @param value the value of the field.
-         * @return this builder
+         * @param header the non-{@code null} name of the field
+         * @param value the non-{@code null} value of the field
+         * @return this instance
          */
         default Mutable add(HttpHeader header, String value)
         {
-            if (value == null)
-                throw new IllegalArgumentException("null value");
-
-            HttpField field = new HttpField(header, value);
-            return add(field);
+            Objects.requireNonNull(header);
+            Objects.requireNonNull(value);
+            return add(new HttpField(header, value));
         }
 
+        /**
+         * <p>Adds a new {@link HttpField} with the given name and {@code long} value.</p>
+         * <p>The new {@link HttpField} is added even if a field with the
+         * same name is already present.</p>
+         *
+         * @param header the non-{@code null} name of the field
+         * @param value the value of the field
+         * @return this instance
+         */
+        default Mutable add(HttpHeader header, long value)
+        {
+            Objects.requireNonNull(header);
+            return add(new HttpField.LongValueHttpField(header, value));
+        }
+
+        /**
+         * <p>Adds the given {@link HttpField} to this instance.</p>
+         *
+         * @param field the {@link HttpField} to add
+         * @return this instance
+         */
         default Mutable add(HttpField field)
         {
-            ListIterator<HttpField> i = listIterator();
-            while (i.hasNext())
-                i.next();
+            Objects.requireNonNull(field);
+            ListIterator<HttpField> i = listIterator(size());
             i.add(field);
             return this;
         }
 
+        /**
+         * <p>Adds all the {@link HttpField}s of the given {@link HttpFields}
+         * to this instance.</p>
+         *
+         * @param fields the fields to add
+         * @return this instance
+         */
         default Mutable add(HttpFields fields)
         {
             for (HttpField field : fields)
+            {
                 add(field);
+            }
             return this;
         }
 
         /**
-         * Add comma separated values, but only if not already
-         * present.
+         * <p>Adds a field associated with a list of values.</p>
          *
-         * @param header The header to add the value(s) to
-         * @param values The value(s) to add
+         * @param name the name of the field
+         * @param list the List value of the field.
          * @return this builder
+         */
+        default Mutable add(String name, List<String> list)
+        {
+            Objects.requireNonNull(name);
+            Objects.requireNonNull(list);
+            if (list.isEmpty())
+                return this;
+            if (list.size() == 1)
+            {
+                String v = list.get(0);
+                return add(name, v == null ? "" : v);
+            }
+            HttpField field = new HttpField.MultiHttpField(name, list);
+            return add(field);
+        }
+
+        /**
+         * <p>Adds the given value(s) to the {@link HttpField} with the given name,
+         * encoding them as comma-separated if necessary,
+         * unless they are already present in existing fields with the same name.</p>
+         *
+         * @param header the field name of the field to add the value(s) to
+         * @param values the value(s) to add
+         * @return this instance
          */
         default Mutable addCSV(HttpHeader header, String... values)
         {
+            Objects.requireNonNull(header);
             QuotedCSV existing = null;
             for (HttpField f : this)
             {
@@ -649,15 +1116,17 @@ public interface HttpFields extends Iterable<HttpField>
         }
 
         /**
-         * Add comma separated values, but only if not already
-         * present.
+         * <p>Adds the given value(s) to the {@link HttpField} with the given name,
+         * encoding them as comma-separated if necessary,
+         * unless they are already present in existing fields with the same name.</p>
          *
-         * @param name The header to add the value(s) to
-         * @param values The value(s) to add
-         * @return this builder
+         * @param name the field name of the field to add the value(s) to
+         * @param values the value(s) to add
+         * @return this instance
          */
         default Mutable addCSV(String name, String... values)
         {
+            Objects.requireNonNull(name);
             QuotedCSV existing = null;
             for (HttpField f : this)
             {
@@ -675,21 +1144,30 @@ public interface HttpFields extends Iterable<HttpField>
         }
 
         /**
-         * Sets the value of a date field.
+         * <p>Adds a new date {@link HttpField} with the given name and {@code date} value.</p>
+         * The {@code date} parameter is the number of milliseconds from the Unix Epoch,
+         * and it is formatted into a string via {@link DateGenerator#formatDate(long)}.
          *
-         * @param name the field name
+         * @param name the non-{@code null} name of the field
          * @param date the field date value
-         * @return this builder
+         * @return this instance
          */
         default Mutable addDateField(String name, long date)
         {
+            Objects.requireNonNull(name);
             add(name, DateGenerator.formatDate(date));
             return this;
         }
 
+        /**
+         * <p>Removes all the fields from this instance.</p>
+         *
+         * @return this instance
+         */
         default Mutable clear()
         {
-            for (ListIterator<HttpField> i = listIterator(); i.hasNext(); )
+            Iterator<HttpField> i = iterator();
+            while (i.hasNext())
             {
                 i.next();
                 i.remove();
@@ -698,54 +1176,58 @@ public interface HttpFields extends Iterable<HttpField>
         }
 
         /**
-         * Ensure that specific HttpField exists when the field may not exist or may
-         * exist and be multi valued.  Multiple existing fields are merged into a
-         * single field.
+         * <p>Ensures that the given {@link HttpField} is present when the field
+         * may not exist or may exist and be multi-valued.</p>
+         * <p>Multiple existing {@link HttpField}s are merged into a single field.</p>
          *
-         * @param field The header to ensure is contained.  The field is used
-         * directly if possible so {@link PreEncodedHttpField}s can be
-         * passed.  If the value needs to be merged with existing values,
-         * then a new field is created.
+         * @param field the field to ensure to be present
          */
         default void ensureField(HttpField field)
         {
+            Objects.requireNonNull(field);
+            HttpHeader header = field.getHeader();
             // Is the field value multi valued?
             if (field.getValue().indexOf(',') < 0)
             {
-                // Call Single valued computeEnsure with either String header name or enum HttpHeader
-                if (field.getHeader() != null)
-                    computeField(field.getHeader(), (h, l) -> computeEnsure(field, l));
+                if (header != null)
+                    computeField(header, (h, l) -> computeEnsure(field, l));
                 else
                     computeField(field.getName(), (h, l) -> computeEnsure(field, l));
             }
             else
             {
-                // call multi valued computeEnsure with either String header name or enum HttpHeader
-                if (field.getHeader() != null)
-                    computeField(field.getHeader(), (h, l) -> computeEnsure(field, field.getValues(), l));
+                if (header != null)
+                    computeField(header, (h, l) -> computeEnsure(field, field.getValues(), l));
                 else
                     computeField(field.getName(), (h, l) -> computeEnsure(field, field.getValues(), l));
             }
         }
 
-        @Override
-        default Iterator<HttpField> iterator()
-        {
-            return listIterator();
-        }
-
-        ListIterator<HttpField> listIterator();
-
+        /**
+         * <p>Puts the given {@link HttpField} into this instance.</p>
+         * <p>If a fields with the same name is present, the given field
+         * replaces it, and other existing fields with the same name
+         * are removed, so that only the given field will be present.</p>
+         * <p>If a field with the same name is not present, the given
+         * field will be added.</p>
+         *
+         * @param field the field to put
+         * @return this instance
+         */
         default Mutable put(HttpField field)
         {
+            Objects.requireNonNull(field);
             boolean put = false;
-            for (ListIterator<HttpField> i = listIterator(); i.hasNext(); )
+            ListIterator<HttpField> i = listIterator();
+            while (i.hasNext())
             {
                 HttpField f = i.next();
                 if (f.isSameName(field))
                 {
                     if (put)
+                    {
                         i.remove();
+                    }
                     else
                     {
                         i.set(field);
@@ -759,42 +1241,58 @@ public interface HttpFields extends Iterable<HttpField>
         }
 
         /**
-         * Set a field.
+         * <p>This method behaves like {@link #remove(String)} when
+         * the given {@code value} is {@code null}, otherwise behaves
+         * like {@link #put(HttpField)}.</p>
          *
          * @param name the name of the field
-         * @param value the value of the field. If null the field is cleared.
-         * @return this builder
+         * @param value the value of the field; if {@code null} the field is removed
+         * @return this instance
          */
         default Mutable put(String name, String value)
         {
+            Objects.requireNonNull(name);
             if (value == null)
                 return remove(name);
             return put(new HttpField(name, value));
         }
 
+        /**
+         * <p>This method behaves like {@link #remove(HttpHeader)} when
+         * the given {@code value} is {@code null}, otherwise behaves
+         * like {@link #put(HttpField)}.</p>
+         *
+         * @param header the name of the field
+         * @param value the value of the field; if {@code null} the field is removed
+         * @return this instance
+         */
         default Mutable put(HttpHeader header, HttpHeaderValue value)
         {
+            Objects.requireNonNull(header);
             if (value == null)
                 return remove(header);
             return put(new HttpField(header, value.toString()));
         }
 
         /**
-         * Set a field.
+         * <p>This method behaves like {@link #remove(HttpHeader)} when
+         * the given {@code value} is {@code null}, otherwise behaves
+         * like {@link #put(HttpField)}.</p>
          *
-         * @param header the header name of the field
-         * @param value the value of the field. If null the field is cleared.
-         * @return this builder
+         * @param header the name of the field
+         * @param value the value of the field; if {@code null} the field is removed
+         * @return this instance
          */
         default Mutable put(HttpHeader header, String value)
         {
+            Objects.requireNonNull(header);
             if (value == null)
                 return remove(header);
             return put(new HttpField(header, value));
         }
 
         /**
-         * Set a field.
+         * <p>Puts a field associated with a list of values.</p>
          *
          * @param name the name of the field
          * @param list the List value of the field. If null the field is cleared.
@@ -803,87 +1301,101 @@ public interface HttpFields extends Iterable<HttpField>
         default Mutable put(String name, List<String> list)
         {
             Objects.requireNonNull(name);
-            Objects.requireNonNull(list);
-            boolean first = true;
-            for (String s : list)
+            if (list == null || list.isEmpty())
+                return remove(name);
+            if (list.size() == 1)
             {
-                HttpField field = new HttpField(name, s);
-                if (first)
-                    put(field);
-                else
-                    add(field);
-                first = false;
+                String value = list.get(0);
+                return put(name, value == null ? "" : value);
             }
-            return this;
+
+            HttpField field = new HttpField.MultiHttpField(name, list);
+            return put(field);
         }
 
         /**
-         * Sets the value of a date field.
+         * <p>Puts a new date {@link HttpField} with the given name and {@code date} value,
+         * with the semantic of {@link #put(HttpField)}.</p>
+         * The {@code date} parameter is the number of milliseconds from the Unix Epoch,
+         * and it is formatted into a string via {@link DateGenerator#formatDate(long)}.
          *
-         * @param name the field name
+         * @param name the non-{@code null} name of the field
          * @param date the field date value
-         * @return this builder
+         * @return this instance
          */
-        default Mutable putDateField(HttpHeader name, long date)
+        default Mutable putDate(HttpHeader name, long date)
         {
+            Objects.requireNonNull(name);
             return put(name, DateGenerator.formatDate(date));
         }
 
         /**
-         * Sets the value of a date field.
+         * <p>Puts a new date {@link HttpField} with the given name and {@code date} value,
+         * with the semantic of {@link #put(HttpField)}.</p>
+         * The {@code date} parameter is the number of milliseconds from the Unix Epoch,
+         * and it is formatted into a string via {@link DateGenerator#formatDate(long)}.
          *
-         * @param name the field name
+         * @param name the non-{@code null} name of the field
          * @param date the field date value
-         * @return this builder
+         * @return this instance
          */
-        default Mutable putDateField(String name, long date)
+        default Mutable putDate(String name, long date)
         {
+            Objects.requireNonNull(name);
             return put(name, DateGenerator.formatDate(date));
         }
 
         /**
-         * Sets the value of an long field.
+         * <p>Puts a new {@link HttpField} with the given name and {@code long} value,
+         * with the semantic of {@link #put(HttpField)}.</p>
          *
-         * @param name the field name
-         * @param value the field long value
-         * @return this builder
+         * @param header the non-{@code null} name of the field
+         * @param value the value of the field
+         * @return this instance
          */
-        default Mutable putLongField(HttpHeader name, long value)
+        default Mutable put(HttpHeader header, long value)
         {
+            Objects.requireNonNull(header);
+            if (value == 0 && header == HttpHeader.CONTENT_LENGTH)
+                return put(HttpFields.CONTENT_LENGTH_0);
+            return put(new HttpField.LongValueHttpField(header, value));
+        }
+
+        /**
+         * <p>Puts a new {@link HttpField} with the given name and {@code long} value,
+         * with the semantic of {@link #put(HttpField)}.</p>
+         *
+         * @param name the non-{@code null} name of the field
+         * @param value the value of the field
+         * @return this instance
+         */
+        default Mutable put(String name, long value)
+        {
+            Objects.requireNonNull(name);
+            if (value == 0 && HttpHeader.CONTENT_LENGTH.is(name))
+                return put(HttpFields.CONTENT_LENGTH_0);
             return put(new HttpField.LongValueHttpField(name, value));
         }
 
         /**
-         * Sets the value of an long field.
-         *
-         * @param name the field name
-         * @param value the field long value
-         * @return this builder
-         */
-        default Mutable putLongField(String name, long value)
-        {
-            return put(name, Long.toString(value));
-        }
-
-        /**
-         * <p>Computes a single field for the given HttpHeader and for existing fields with the same header.</p>
+         * <p>Computes a single field for the given {@link HttpHeader} and for existing fields with the same header.</p>
          *
          * <p>The compute function receives the field name and a list of fields with the same name
          * so that their values can be used to compute the value of the field that is returned
-         * by the compute function.
+         * by the compute function parameter.
          * If the compute function returns {@code null}, the fields with the given name are removed.</p>
          * <p>This method comes handy when you want to add an HTTP header if it does not exist,
          * or add a value if the HTTP header already exists, similarly to
          * {@link Map#compute(Object, BiFunction)}.</p>
          *
          * <p>This method can be used to {@link #put(HttpField) put} a new field (or blindly replace its value):</p>
-         * <pre>
+         * <pre>{@code
          * httpFields.computeField("X-New-Header",
-         *     (name, fields) -&gt; new HttpField(name, "NewValue"));
-         * </pre>
+         *     (name, fields) -> new HttpField(name, "NewValue"));
+         * }</pre>
          *
          * <p>This method can be used to coalesce many fields into one:</p>
-         * <pre>
+         * <pre>{@code
          * // Input:
          * GET / HTTP/1.1
          * Host: localhost
@@ -892,7 +1404,7 @@ public interface HttpFields extends Iterable<HttpField>
          * User-Agent: Jetty
          *
          * // Computation:
-         * httpFields.computeField("Cookie", (name, fields) -&gt;
+         * httpFields.computeField("Cookie", (name, fields) ->
          * {
          *     // No cookies, nothing to do.
          *     if (fields == null)
@@ -900,7 +1412,7 @@ public interface HttpFields extends Iterable<HttpField>
          *
          *     // Coalesces all cookies.
          *     String coalesced = fields.stream()
-         *         .flatMap(field -&gt; Stream.of(field.getValues()))
+         *         .flatMap(field -> Stream.of(field.getValues()))
          *         .collect(Collectors.joining(", "));
          *
          *     // Returns a single Cookie header with all cookies.
@@ -912,11 +1424,11 @@ public interface HttpFields extends Iterable<HttpField>
          * Host: localhost
          * Cookie: foo=1, bar=2, baz=3
          * User-Agent: Jetty
-         * </pre>
+         * }</pre>
          *
          * <p>This method can be used to replace a field:</p>
-         * <pre>
-         * httpFields.computeField("X-Length", (name, fields) -&gt;
+         * <pre>{@code
+         * httpFields.computeField("X-Length", (name, fields) ->
          * {
          *     if (fields == null)
          *         return null;
@@ -930,42 +1442,50 @@ public interface HttpFields extends Iterable<HttpField>
          *     // Replace X-Length headers with X-Capacity header.
          *     return new HttpField("X-Capacity", length);
          * });
-         * </pre>
+         * }</pre>
          *
          * <p>This method can be used to remove a field:</p>
-         * <pre>
-         * httpFields.computeField("Connection", (name, fields) -&gt; null);
-         * </pre>
+         * <pre>{@code
+         * httpFields.computeField("Connection", (name, fields) -> null);
+         * }</pre>
          *
-         * @param header the HTTP header
+         * @param header the field name
          * @param computeFn the compute function
+         * @return this instance
          */
-        default void computeField(HttpHeader header, BiFunction<HttpHeader, List<HttpField>, HttpField> computeFn)
+        default Mutable computeField(HttpHeader header, BiFunction<HttpHeader, List<HttpField>, HttpField> computeFn)
         {
-            put(computeFn.apply(header, stream().filter(f -> f.getHeader() == header).collect(Collectors.toList())));
+            Objects.requireNonNull(header);
+            HttpField result = computeFn.apply(header, stream().filter(f -> f.getHeader() == header).toList());
+            return result != null ? put(result) : remove(header);
         }
 
         /**
-         * <p>Computes a single field for the given HTTP header name and for existing fields with the same name.</p>
+         * <p>Computes a single field for the given HTTP field name and for existing fields with the same name.</p>
          *
-         * @param name the HTTP header name
+         * @param name the field name
          * @param computeFn the compute function
+         * @return this instance
          * @see #computeField(HttpHeader, BiFunction)
          */
-        default void computeField(String name, BiFunction<String, List<HttpField>, HttpField> computeFn)
+        default Mutable computeField(String name, BiFunction<String, List<HttpField>, HttpField> computeFn)
         {
-            put(computeFn.apply(name, stream().filter(f -> f.is(name)).collect(Collectors.toList())));
+            Objects.requireNonNull(name);
+            HttpField result = computeFn.apply(name, stream().filter(f -> f.is(name)).toList());
+            return result != null ? put(result) : remove(name);
         }
 
         /**
-         * Remove a field.
+         * <p>Removes all the fields with the given name.</p>
          *
-         * @param header the field to remove
-         * @return this builder
+         * @param header the name of the fields to remove
+         * @return this instance
          */
         default Mutable remove(HttpHeader header)
         {
-            for (ListIterator<HttpField> i = listIterator(); i.hasNext();)
+            Objects.requireNonNull(header);
+            Iterator<HttpField> i = iterator();
+            while (i.hasNext())
             {
                 HttpField f = i.next();
                 if (f.getHeader() == header)
@@ -974,27 +1494,35 @@ public interface HttpFields extends Iterable<HttpField>
             return this;
         }
 
-        default Mutable remove(EnumSet<HttpHeader> fields)
+        /**
+         * <p>Removes all the fields with the given names.</p>
+         *
+         * @param headers the names of the fields to remove
+         * @return this instance
+         */
+        default Mutable remove(EnumSet<HttpHeader> headers)
         {
-            for (ListIterator<HttpField> i = listIterator(); i.hasNext();)
+            Iterator<HttpField> i = iterator();
+            while (i.hasNext())
             {
                 HttpField f = i.next();
                 HttpHeader h = f.getHeader();
-                if (h != null && fields.contains(h))
+                if (h != null && headers.contains(h))
                     i.remove();
             }
             return this;
         }
 
         /**
-         * Remove a field.
+         * <p>Removes all the fields with the given name.</p>
          *
-         * @param name the field to remove
-         * @return this builder
+         * @param name the name of the fields to remove
+         * @return this instance
          */
         default Mutable remove(String name)
         {
-            for (ListIterator<HttpField> i = listIterator(); i.hasNext();)
+            Objects.requireNonNull(name);
+            for (ListIterator<HttpField> i = listIterator(); i.hasNext(); )
             {
                 HttpField f = i.next();
                 if (f.is(name))
@@ -1003,7 +1531,7 @@ public interface HttpFields extends Iterable<HttpField>
             return this;
         }
 
-        static String formatCsvExcludingExisting(QuotedCSV existing, String... values)
+        private static String formatCsvExcludingExisting(QuotedCSV existing, String... values)
         {
             // remove any existing values from the new values
             boolean add = true;
@@ -1028,23 +1556,18 @@ public interface HttpFields extends Iterable<HttpField>
                 {
                     if (v == null)
                         continue;
-                    if (value.length() > 0)
+                    if (!value.isEmpty())
                         value.append(", ");
                     value.append(v);
                 }
-                if (value.length() > 0)
+                if (!value.isEmpty())
                     return value.toString();
             }
 
             return null;
         }
 
-        /**
-         * Compute ensure field with a single value
-         * @param ensure The field to ensure exists
-         * @param fields The list of existing fields with the same header
-         */
-        static HttpField computeEnsure(HttpField ensure, List<HttpField> fields)
+        private static HttpField computeEnsure(HttpField ensure, List<HttpField> fields)
         {
             // If no existing fields return the ensure field
             if (fields == null || fields.isEmpty())
@@ -1067,7 +1590,7 @@ public interface HttpFields extends Iterable<HttpField>
             for (HttpField f : fields)
             {
                 // Always append multiple fields into a single field value
-                if (v.length() > 0)
+                if (!v.isEmpty())
                     v.append(", ");
                 v.append(f.getValue());
 
@@ -1083,13 +1606,7 @@ public interface HttpFields extends Iterable<HttpField>
             return new HttpField(ensure.getHeader(), ensure.getName(), v.toString());
         }
 
-        /**
-         * Compute ensure field with a multiple values
-         * @param ensure The field to ensure exists
-         * @param values The QuotedCSV parsed field values.
-         * @param fields The list of existing fields with the same header
-         */
-        static HttpField computeEnsure(HttpField ensure, String[] values, List<HttpField> fields)
+        private static HttpField computeEnsure(HttpField ensure, String[] values, List<HttpField> fields)
         {
             // If no existing fields return the ensure field
             if (fields == null || fields.isEmpty())
@@ -1133,7 +1650,7 @@ public interface HttpFields extends Iterable<HttpField>
             for (HttpField f : fields)
             {
                 // Always append multiple fields into a single field value
-                if (v.length() > 0)
+                if (!v.isEmpty())
                     v.append(", ");
                 v.append(f.getValue());
 
@@ -1155,657 +1672,233 @@ public interface HttpFields extends Iterable<HttpField>
             else if (ensured > 0)
             {
                 for (String value : values)
+                {
                     if (value != null)
                         v.append(", ").append(value);
+                }
             }
 
             // return a merged header with missing ensured values added
             return new HttpField(ensure.getHeader(), ensure.getName(), v.toString());
         }
-    }
-
-    /**
-     * HTTP Fields. A collection of HTTP header and or Trailer fields.
-     *
-     * <p>This class is not synchronized as it is expected that modifications will only be performed by a
-     * single thread.
-     *
-     * <p>The cookie handling provided by this class is guided by the Servlet specification and RFC6265.
-     */
-    class MutableHttpFields implements Mutable
-    {
-        private static final int INITIAL_SIZE = 16;
-        private static final int SIZE_INCREMENT = 4;
-        
-        private HttpField[] _fields;
-        private int _size;
 
         /**
-         * Initialize an empty HttpFields.
+         * A wrapper of {@link HttpFields} instances.
          */
-        protected MutableHttpFields()
+        class Wrapper implements Mutable
         {
-            this(INITIAL_SIZE);  // Based on small sample of Chrome requests.
-        }
+            private final Mutable _fields;
 
-        /**
-         * Initialize an empty HttpFields.
-         *
-         * @param capacity the capacity of the http fields
-         */
-        protected MutableHttpFields(int capacity)
-        {
-            _fields = new HttpField[capacity];
-        }
-
-        /**
-         * Initialize HttpFields from another.
-         *
-         * @param fields the fields to copy data from
-         */
-        protected MutableHttpFields(HttpFields fields)
-        {
-            add(fields);
-        }
-
-        /**
-         * Initialize HttpFields from another and replace a field
-         *
-         * @param fields the fields to copy data from
-         * @param replaceField the replacement field
-         */
-        protected MutableHttpFields(HttpFields fields, HttpField replaceField)
-        {
-            _fields = new HttpField[fields.size() + SIZE_INCREMENT];
-            _size = 0;
-            boolean put = false;
-            for (HttpField f : fields)
+            public Wrapper(Mutable fields)
             {
-                if (replaceField.isSameName(f))
-                {
-                    if (!put)
-                        _fields[_size++] = replaceField;
-                    put = true;
-                }
-                else
-                {
-                    _fields[_size++] = f;
-                }
+                _fields = fields;
             }
-            if (!put)
-                _fields[_size++] = replaceField;
-        }
 
-        /**
-         * Initialize HttpFields from another and remove fields
-         *
-         * @param fields the fields to copy data from
-         * @param removeFields the the fields to remove
-         */
-        protected MutableHttpFields(HttpFields fields, EnumSet<HttpHeader> removeFields)
-        {
-            _fields = new HttpField[fields.size() + SIZE_INCREMENT];
-            _size = 0;
-            for (HttpField f : fields)
+            /**
+             * Called when a field is added (including as part of a put).
+             *
+             * @param field The field being added.
+             * @return The field to add, or null if the add is to be ignored.
+             */
+            public HttpField onAddField(HttpField field)
             {
-                if (f.getHeader() == null || !removeFields.contains(f.getHeader()))
-                    _fields[_size++] = f;
+                return field;
             }
-        }
 
-        @Override
-        public Mutable add(HttpField field)
-        {
-            if (field != null)
+            /**
+             * Called when a field is removed (including as part of a put).
+             *
+             * @param field The field being removed.
+             * @return True if the field should be removed, false otherwise.
+             */
+            public boolean onRemoveField(HttpField field)
             {
-                if (_fields == null)
-                    _fields = new HttpField[INITIAL_SIZE];
-                if (_size == _fields.length)
-                    _fields = Arrays.copyOf(_fields, _size + SIZE_INCREMENT);
-                _fields[_size++] = field;
-            }
-            return this;
-        }
-
-        @Override
-        public Mutable add(HttpFields fields)
-        {
-            if (_fields == null)
-                _fields = new HttpField[fields.size() + SIZE_INCREMENT];
-            else if (_size + fields.size() >= _fields.length)
-                _fields = Arrays.copyOf(_fields, _size + fields.size() + SIZE_INCREMENT);
-
-            if (fields.size() == 0)
-                return this;
-
-            if (fields instanceof ImmutableHttpFields immutable)
-            {
-                System.arraycopy(immutable._fields, 0, _fields, _size, immutable._size);
-                _size += immutable._size;
-            }
-            else if (fields instanceof MutableHttpFields mutable)
-            {
-                System.arraycopy(mutable._fields, 0, _fields, _size, mutable._size);
-                _size += mutable._size;
-            }
-            else
-            {
-                for (HttpField f : fields)
-                    _fields[_size++] = f;
-            }
-            return this;
-        }
-
-        @Override
-        public HttpFields asImmutable()
-        {
-            return new ImmutableHttpFields(Arrays.copyOf(_fields, _size));
-        }
-
-        @Override
-        public HttpFields takeAsImmutable()
-        {
-            HttpField[] fields = _fields == null ? new HttpField[0] : _fields;
-            int size = _size;
-            _fields = null;
-            _size = 0;
-
-            return new ImmutableHttpFields(fields, size);
-        }
-
-        @Override
-        public Mutable clear()
-        {
-            _size = 0;
-            return this;
-        }
-
-        @Override
-        public boolean equals(Object o)
-        {
-            if (this == o)
                 return true;
-            if (!(o instanceof MutableHttpFields))
-                return false;
+            }
 
-            return isEqualTo((HttpFields)o);
-        }
-
-        /**
-         * Get a Field by index.
-         *
-         * @param index the field index
-         * @return A Field value or null if the Field value has not been set
-         */
-        @Override
-        public HttpField getField(int index)
-        {
-            if (index >= _size || index < 0)
-                throw new NoSuchElementException();
-            return _fields[index];
-        }
-
-        @Override
-        public int hashCode()
-        {
-            int hash = 0;
-            for (int i = _fields.length; i-- > 0; )
-                hash ^= _fields[i].hashCode();
-            return hash;
-        }
-
-        @Override
-        public Iterator<HttpField> iterator()
-        {
-            return new Iterator<>()
+            public HttpField onReplaceField(HttpField oldField, HttpField newField)
             {
-                int _index = 0;
+                return newField;
+            }
 
-                @Override
-                public boolean hasNext()
-                {
-                    return _index < _size;
-                }
-
-                @Override
-                public HttpField next()
-                {
-                    return _fields[_index++];
-                }
-
-                @Override
-                public void remove()
-                {
-                    if (_size == 0)
-                        throw new IllegalStateException();
-                    MutableHttpFields.this.remove(--_index);
-                }
-            };
-        }
-
-        @Override
-        public ListIterator<HttpField> listIterator()
-        {
-            return new ListItr();
-        }
-
-        @Override
-        public Mutable put(HttpField field)
-        {
-            boolean put = false;
-
-            for (int i = 0; i < _size; i++)
+            @Override
+            public int size()
             {
-                HttpField f = _fields[i];
-                if (f.isSameName(field))
+                // This impl needed only as an optimization
+                return _fields.size();
+            }
+
+            @Override
+            public Stream<HttpField> stream()
+            {
+                // This impl needed only as an optimization
+                return _fields.stream();
+            }
+
+            @Override
+            public Mutable add(HttpField field)
+            {
+                if (field != null)
                 {
-                    if (put)
-                        System.arraycopy(_fields, i + 1, _fields, i, _size-- - i-- - 1);
-                    else
+                    field = onAddField(field);
+                    if (field != null)
+                        _fields.add(field);
+                }
+                return this;
+            }
+
+            @Override
+            public Mutable put(HttpField field)
+            {
+                Objects.requireNonNull(field);
+                // rewrite put to ensure that removes are called before replace
+                int put = -1;
+                ListIterator<HttpField> i = _fields.listIterator();
+                while (i.hasNext())
+                {
+                    HttpField f = i.next();
+                    if (f.isSameName(field))
                     {
-                        _fields[i] = field;
-                        put = true;
+                        if (put < 0)
+                            put = i.previousIndex();
+                        else if (onRemoveField(f))
+                            i.remove();
                     }
                 }
-            }
-            if (!put)
-                add(field);
-            return this;
-        }
 
-        @Override
-        public Mutable put(String name, String value)
-        {
-            return (value == null)
-                ? remove(name)
-                : put(new HttpField(name, value));
-        }
-
-        @Override
-        public Mutable put(HttpHeader header, HttpHeaderValue value)
-        {
-            return put(header, value.toString());
-        }
-
-        @Override
-        public Mutable put(HttpHeader header, String value)
-        {
-            return (value == null)
-                ? remove(header)
-                : put(new HttpField(header, value));
-        }
-
-        @Override
-        public Mutable put(String name, List<String> list)
-        {
-            Objects.requireNonNull(name);
-            Objects.requireNonNull(list);
-            remove(name);
-            for (String v : list)
-            {
-                if (v != null)
-                    add(name, v);
-            }
-            return this;
-        }
-
-        @Override
-        public void computeField(HttpHeader header, BiFunction<HttpHeader, List<HttpField>, HttpField> computeFn)
-        {
-            computeField(header, computeFn, (f, h) -> f.getHeader() == h);
-        }
-
-        @Override
-        public void computeField(String name, BiFunction<String, List<HttpField>, HttpField> computeFn)
-        {
-            computeField(name, computeFn, HttpField::is);
-        }
-
-        public <T> void computeField(T header, BiFunction<T, List<HttpField>, HttpField> computeFn, BiPredicate<HttpField, T> matcher)
-        {
-            // Look for first occurrence
-            int first = -1;
-            for (int i = 0; i < _size; i++)
-            {
-                HttpField f = _fields[i];
-                if (matcher.test(f, header))
+                if (put < 0)
                 {
-                    first = i;
-                    break;
+                    field = onAddField(field);
+                    if (field != null)
+                        _fields.add(field);
                 }
-            }
-
-            // If the header is not found, add a new one;
-            if (first < 0)
-            {
-                HttpField newField = computeFn.apply(header, null);
-                if (newField != null)
-                    add(newField);
-                return;
-            }
-
-            // Are there any more occurrences?
-            List<HttpField> found = null;
-            for (int i = first + 1; i < _size; i++)
-            {
-                HttpField f = _fields[i];
-                if (matcher.test(f, header))
-                {
-                    if (found == null)
-                    {
-                        found = new ArrayList<>();
-                        found.add(_fields[first]);
-                    }
-                    // Remember and remove additional fields
-                    found.add(f);
-                    remove(i--);
-                }
-            }
-
-            // If no additional fields were found, handle singleton case
-            if (found == null)
-                found = Collections.singletonList(_fields[first]);
-            else
-                found = Collections.unmodifiableList(found);
-
-            HttpField newField = computeFn.apply(header, found);
-            if (newField == null)
-                remove(first);
-            else
-                _fields[first] = newField;
-        }
-
-        @Override
-        public Mutable remove(HttpHeader name)
-        {
-            for (int i = 0; i < _size; i++)
-            {
-                HttpField f = _fields[i];
-                if (f.getHeader() == name)
-                    remove(i--);
-            }
-            return this;
-        }
-
-        @Override
-        public Mutable remove(EnumSet<HttpHeader> fields)
-        {
-            for (int i = 0; i < _size; i++)
-            {
-                HttpField f = _fields[i];
-                if (fields.contains(f.getHeader()))
-                    remove(i--);
-            }
-            return this;
-        }
-
-        @Override
-        public Mutable remove(String name)
-        {
-            for (int i = 0; i < _size; i++)
-            {
-                HttpField f = _fields[i];
-                if (f.is(name))
-                    remove(i--);
-            }
-            return this;
-        }
-
-        private void remove(int i)
-        {
-            _size--;
-            System.arraycopy(_fields, i + 1, _fields, i, _size - i);
-            _fields[_size] = null;
-        }
-
-        public int size()
-        {
-            return _size;
-        }
-
-        @Override
-        public Stream<HttpField> stream()
-        {
-            return Arrays.stream(_fields, 0, _size);
-        }
-
-        @Override
-        public String toString()
-        {
-            return asString();
-        }
-
-        private class ListItr implements ListIterator<HttpField>
-        {
-            int _cursor;       // index of next element to return
-            int _current = -1;
-
-            @Override
-            public void add(HttpField field)
-            {
-                if (field == null)
-                    return;
-
-                int last = _size++;
-                if (_fields.length < _size)
-                    _fields = Arrays.copyOf(_fields, _fields.length + SIZE_INCREMENT);
-                System.arraycopy(_fields, _cursor, _fields, _cursor + 1, last - _cursor);
-                _fields[_cursor++] = field;
-                _current = -1;
-            }
-
-            @Override
-            public boolean hasNext()
-            {
-                return _cursor != _size;
-            }
-
-            @Override
-            public boolean hasPrevious()
-            {
-                return _cursor > 0;
-            }
-
-            @Override
-            public HttpField next()
-            {
-                if (_cursor == _size)
-                    throw new NoSuchElementException();
-                _current = _cursor++;
-                return _fields[_current];
-            }
-
-            @Override
-            public int nextIndex()
-            {
-                return _cursor + 1;
-            }
-
-            @Override
-            public HttpField previous()
-            {
-                if (_cursor == 0)
-                    throw new NoSuchElementException();
-                _current = --_cursor;
-                return _fields[_current];
-            }
-
-            @Override
-            public int previousIndex()
-            {
-                return _cursor - 1;
-            }
-
-            @Override
-            public void remove()
-            {
-                if (_current < 0)
-                    throw new IllegalStateException();
-                MutableHttpFields.this.remove(_current);
-                _cursor = _current;
-                _current = -1;
-            }
-
-            @Override
-            public void set(HttpField field)
-            {
-                if (_current < 0)
-                    throw new IllegalStateException();
-                if (field == null)
-                    remove();
                 else
-                    _fields[_current] = field;
+                {
+                    i = _fields.listIterator(put);
+                    HttpField old = i.next();
+                    field = onReplaceField(old, field);
+                    if (field != null)
+                        i.set(field);
+                }
+
+                return this;
+            }
+
+            @Override
+            public Mutable clear()
+            {
+                _fields.clear();
+                return this;
+            }
+
+            @Override
+            public ListIterator<HttpField> listIterator(int index)
+            {
+                ListIterator<HttpField> i = _fields.listIterator(index);
+                return new ListIterator<>()
+                {
+                    HttpField last;
+
+                    @Override
+                    public boolean hasNext()
+                    {
+                        return i.hasNext();
+                    }
+
+                    @Override
+                    public HttpField next()
+                    {
+                        return last = i.next();
+                    }
+
+                    @Override
+                    public boolean hasPrevious()
+                    {
+                        return i.hasPrevious();
+                    }
+
+                    @Override
+                    public HttpField previous()
+                    {
+                        return last = i.previous();
+                    }
+
+                    @Override
+                    public int nextIndex()
+                    {
+                        return i.nextIndex();
+                    }
+
+                    @Override
+                    public int previousIndex()
+                    {
+                        return i.previousIndex();
+                    }
+
+                    @Override
+                    public void remove()
+                    {
+                        if (last != null && onRemoveField(last))
+                        {
+                            last = null;
+                            i.remove();
+                        }
+                    }
+
+                    @Override
+                    public void set(HttpField field)
+                    {
+                        if (field == null)
+                        {
+                            if (last != null && onRemoveField(last))
+                            {
+                                last = null;
+                                i.remove();
+                            }
+                        }
+                        else
+                        {
+                            if (last != null)
+                            {
+                                field = onReplaceField(last, field);
+                                if (field != null)
+                                {
+                                    last = null;
+                                    i.set(field);
+                                }
+                            }
+                        }
+                    }
+
+                    @Override
+                    public void add(HttpField field)
+                    {
+                        if (field != null)
+                        {
+                            field = onAddField(field);
+                            if (field != null)
+                            {
+                                last = null;
+                                i.add(field);
+                            }
+                        }
+                    }
+                };
             }
         }
     }
 
-    /**
-     * HTTP Fields. A collection of HTTP header and or Trailer fields.
-     *
-     * <p>This class is not synchronized as it is expected that modifications will only be performed by a
-     * single thread.
-     *
-     * <p>The cookie handling provided by this class is guided by the Servlet specification and RFC6265.
-     */
-    class ImmutableHttpFields implements HttpFields
+    @Deprecated(forRemoval = true)
+    class MutableHttpFields extends org.eclipse.jetty.http.MutableHttpFields
     {
-        final HttpField[] _fields;
-        final int _size;
+    }
 
-        /**
-         * Initialize HttpFields from copy.
-         *
-         * @param fields the fields to copy data from
-         */
-        protected ImmutableHttpFields(HttpField[] fields)
-        {
-            this(fields, fields.length);
-        }
-
+    @Deprecated(forRemoval = true)
+    class ImmutableHttpFields extends org.eclipse.jetty.http.ImmutableHttpFields
+    {
         protected ImmutableHttpFields(HttpField[] fields, int size)
         {
-            Objects.requireNonNull(fields);
-            _fields = fields;
-            _size = size;
-        }
-
-        @Override
-        public HttpFields asImmutable()
-        {
-            return this;
-        }
-
-        @Override
-        public HttpFields takeAsImmutable()
-        {
-            return this;
-        }
-
-        @Override
-        public boolean equals(Object o)
-        {
-            if (this == o)
-                return true;
-            if (!(o instanceof ImmutableHttpFields))
-                return false;
-
-            return isEqualTo((HttpFields)o);
-        }
-
-        @Override
-        public String get(String header)
-        {
-            // default impl overridden for efficiency
-            for (HttpField f : _fields)
-                if (f != null && f.is(header))
-                    return f.getValue();
-            return null;
-        }
-
-        @Override
-        public String get(HttpHeader header)
-        {
-            // default impl overridden for efficiency
-            for (HttpField f : _fields)
-                if (f != null && f.getHeader() == header)
-                    return f.getValue();
-            return null;
-        }
-
-        @Override
-        public HttpField getField(HttpHeader header)
-        {
-            // default impl overridden for efficiency
-            for (HttpField f : _fields)
-                if (f != null && f.getHeader() == header)
-                    return f;
-            return null;
-        }
-
-        @Override
-        public HttpField getField(String name)
-        {
-            // default impl overridden for efficiency
-            for (HttpField f : _fields)
-                if (f != null && f.is(name))
-                    return f;
-            return null;
-        }
-
-        @Override
-        public HttpField getField(int index)
-        {
-            if (index >= _fields.length)
-                throw new NoSuchElementException();
-            return _fields[index];
-        }
-
-        @Override
-        public int hashCode()
-        {
-            int hash = 0;
-            for (int i = _fields.length; i-- > 0; )
-                hash ^= _fields[i].hashCode();
-            return hash;
-        }
-
-        @Override
-        public Iterator<HttpField> iterator()
-        {
-            return new Iterator<>()
-            {
-                int _index = 0;
-
-                @Override
-                public boolean hasNext()
-                {
-                    return _index < _size;
-                }
-
-                @Override
-                public HttpField next()
-                {
-                    return _fields[_index++];
-                }
-            };
-        }
-
-        @Override
-        public int size()
-        {
-            return _size;
-        }
-
-        @Override
-        public Stream<HttpField> stream()
-        {
-            return Arrays.stream(_fields).filter(Objects::nonNull);
-        }
-
-        @Override
-        public String toString()
-        {
-            return asString();
+            super(fields, size);
         }
     }
 }
