@@ -1,6 +1,6 @@
 //
 // ========================================================================
-// Copyright (c) 1995-2022 Mort Bay Consulting Pty Ltd and others.
+// Copyright (c) 1995 Mort Bay Consulting Pty Ltd and others.
 //
 // This program and the accompanying materials are made available under the
 // terms of the Eclipse Public License v. 2.0 which is available at
@@ -13,8 +13,8 @@
 
 package org.eclipse.jetty.start;
 
-import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -56,7 +56,7 @@ public class Modules implements Iterable<Module>
         this._args = args;
 
         // Allow override mostly for testing
-        if (!args.getCoreEnvironment().getProperties().containsKey("java.version"))
+        if (!args.getJettyEnvironment().getProperties().containsKey("java.version"))
         {
             String javaVersion = System.getProperty("java.version");
             if (javaVersion != null)
@@ -71,7 +71,7 @@ public class Modules implements Iterable<Module>
             Path deprecatedPath = _baseHome.getPath("modules/deprecated.properties");
             if (deprecatedPath != null && FS.exists(deprecatedPath))
             {
-                try (FileInputStream inputStream = new FileInputStream(deprecatedPath.toFile()))
+                try (InputStream inputStream = Files.newInputStream(deprecatedPath))
                 {
                     _deprecated.load(inputStream);
                 }
@@ -238,7 +238,7 @@ public class Modules implements Iterable<Module>
                 name = "";
             }
             if (module.isTransitive() && module.hasIniTemplate())
-                out.printf(" ".repeat(31) + "ini template available with --add-module=%s%n", module.getName());
+                out.printf(" ".repeat(31) + "ini template available with --add-modules=%s%n", module.getName());
         }
     }
 
@@ -458,13 +458,13 @@ public class Modules implements Iterable<Module>
             newlyEnabled.add(module.getName());
 
             // Expand module properties
-            module.expandDependencies(_args.getCoreEnvironment().getProperties());
+            module.expandDependencies(_args.getJettyEnvironment().getProperties());
 
             // Apply default configuration
             if (module.hasDefaultConfig())
             {
                 String source = module.getName() + "[ini]";
-                Environment environment = _args.getCoreEnvironment();
+                StartEnvironment environment = _args.getJettyEnvironment();
                 environment = _args.parse(environment, "--module=" + module.getName(), source);
 
                 for (String line : module.getIniSection())
@@ -497,7 +497,7 @@ public class Modules implements Iterable<Module>
                     Path file = _baseHome.getPath("modules/" + dependentModule + ".mod");
                     if (!isConditional || Files.exists(file))
                     {
-                        registerModule(file).expandDependencies(_args.getCoreEnvironment().getProperties());
+                        registerModule(file).expandDependencies(_args.getJettyEnvironment().getProperties());
                         providers = _provided.get(dependentModule);
                         if (providers == null || providers.isEmpty())
                             throw new UsageException("Module %s does not provide %s", _baseHome.toShortForm(file), dependentModule);
